# IJudge

./: README.md
comparator/src/: Makefile  comparator.cpp  comparator.hpp  floating_point_comparator.cpp  floating_point_comparator.hpp  floating_point_compare  floating_point_compare.cpp  general_comparator.cpp  general_comparator.hpp  general_compare  general_compare.cpp  integer_comparator.cpp  integer_comparator.hpp  integer_compare  integer_compare.cpp  utility.cpp  utility.hpp  word_comparator.cpp  word_comparator.hpp  word_compare  word_compare.cpp
comparator/test/test_floating_point_comparator/: Makefile  test_1A.txt  test_1B.txt  test_2A.txt  test_2B.txt  test_3A.txt  test_3B.txt  test_floating_point_comparator  test_floating_point_comparator.cpp
comparator/test/test_general_comparator/: Makefile  test_1B.txt  test_2A.txt  test_2B.txt  (+16 more)
evaluator/: CMakeLists.txt  eval.cpp  eval.h  forever.cpp  main.cpp  mem.cpp  parser.hpp  tests.cpp
flowchart-demo/: main.html  main.js
web/: app.js  common.js  package.json
web/database/: database.js
web/routes/: add_problem.js  create_account.js  delete_evaluation.js  delete_problem.js  edit_evaluation.js  edit_problem.js  index.js  login.js  logout.js  make_submission.js  problem.js  problem_list.js  view_evaluations.js  view_submissions.js
web/views/: add_problem.jade  create_account.jade  edit_evaluation.jade  edit_problem.jade  error.jade  index.jade  layout.jade  login.jade  make_submission.jade  problem.jade  problem_list.jade  view_evaluations.jade  view_single_submission.jade  view_submissions.jade
(+35 files in other folders)
